--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
     "hello-world-polymer": "~1.1.0",
+    "login-form": "0.1.1",
     "core-ajax": "Polymer/core-ajax#^0.5.6"
   }
 }
